# signal-ai

./: .gitignore  .gitmodules  README.md  architecture.md  main.py  measurement_registry.json  pyproject.toml  signal_assistant.db
.gemini/commands/openspec/: apply.toml  archive.toml  proposal.toml
ci/: verify_release_build.py
ci/static_analysis/: check_enclave_imports.py  logging_violations.sh
docs/: enclave_integration.md  enclave_version_management.md  privacy_architecture.md  release_process.md  rollback_runbook.md  signal_assistant_core.md
keys/: registry.pub
openspec/: project.md
openspec/changes/document-privacy-architecture/: design.md  proposal.md  tasks.md
openspec/changes/document-privacy-architecture/specs/privacy-documentation/: spec.md
openspec/changes/document-privacy-architecture/specs/signal-assistant-core/: spec.md
openspec/changes/implement-signal-assistant-enclave/: design.md  proposal.md  tasks.md
openspec/changes/refactor-to-ai-assistant/: design.md  privacy_design.md  proposal.md  tasks.md
openspec/changes/refactor-to-ai-assistant/specs/message-processing/: spec.md
openspec/changes/signal-assistant-enclave-architecture/: design.md  proposal.md  tasks.md
openspec/changes/signal-assistant-governance-and-boundary-hardening/: design.md  proposal.md  tasks.md
openspec/changes/signal-assistant-hardening/: design.md  proposal.md  tasks.md
openspec/changes/signal-assistant-operational-governance/: design.md  proposal.md  tasks.md
openspec/changes/signal-assistant-spec-enforcement/: README.md  design.md  proposal.md  tasks.md
openspec/changes/signal-enclave-oss-readiness/: design.md  proposal.md  tasks.md
openspec/changes/taskify-privacy-refactor/: proposal.md  tasks.md
src/ai_assistant_bot/: config.py
src/ai_assistant_bot/signal_adapter/: client.py  events.py  messages.py  privacy_core_api.md
src/signal_assistant/: cli.py  config.py  invariant_manifest.py  main.py  mocks.py  simulate.py
src/signal_assistant/enclave/: app.py  exceptions.py  kms.py  secure_config.py  secure_logging.py  serialization.py  signal_lib.py  state_encryption.py  transport.py
src/signal_assistant/enclave/bot/: llm.py  orchestrator.py
src/signal_assistant/enclave/privacy_core/: core.py  sanitizer.py
src/signal_assistant/host/: logging_client.py  proxy.py  transport.py
src/signal_assistant/host/signal_adapter/: client.py  types.py
src/signal_assistant/host/storage/: blob_store.py  database.py  models.py
tests/: test_attestation_gating.py  test_enclave_host_comm.py  test_enclave_secure_logging.py  test_governance.py  test_host_logging_client.py  test_identity_le_control.py  test_kms.py  test_le_control.py  test_llm_pipeline_sanitization.py  test_logging_blindness.py  test_pii_sanitizer.py  test_policy_drift.py  test_secure_logging_enforcement.py  test_user_deletion.py
tests/unit/ai_assistant_bot/signal_adapter/: test_client.py
tools/: policy_drift_check.py  registry.py  verify_enclave.py
(+34 files in other folders)
