[tool.poetry]
name = "signal-assistant"
version = "0.1.0"
description = "A privacy-focused AI assistant for Signal."
authors = ["Signal Assistant Maintainers"]
readme = "README.md"
packages = [{include = "signal_assistant", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.10"
pydantic-settings = "^2.6"

[tool.poetry.group.host.dependencies]
sqlalchemy = "^2.0"
websockets = "^14.1"  # For Signal Transport Proxy

[tool.poetry.group.enclave.dependencies]
signal-client = "^0.1.0"
openai = "^1.57"
cryptography = "^44.0"
# instructor = "^1.6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
ruff = "^0.8.0"
black = "^24.10"
mypy = "^1.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
signal-assistant = "signal_assistant.cli:main"
