[tool.poetry]
name = "signal-assistant"
version = "0.1.0"
description = "A privacy-focused AI assistant for Signal."
authors = ["Signal Assistant Maintainers"]
readme = "README.md"
packages = [{include = "signal_assistant", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
pydantic = "^2.10"
pydantic-settings = "^2.6"
signal-assistant-enclave = { path = "enclave_package", develop = true }

[tool.poetry.group.host.dependencies]
sqlalchemy = "^2.0"
websockets = "^14.1"  # For Signal Transport Proxy
signal-client = "^0.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
ruff = "^0.8.0"
black = "^24.10"
mypy = "^1.13"
import-linter = "^1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
signal-assistant = "signal_assistant.cli:main"

[tool.pytest]
ini_options.pythonpath = ["src", "tools"]

[tool.importlinter]
root_project_path = "src"
root_package = "signal_assistant"

[[tool.importlinter.contracts]]
name = "Enclave cannot import Host"
type = "forbidden"
source_modules = ["signal_assistant.enclave"]
forbidden_modules = ["signal_assistant.host"]
